force-app/main/default/objects/Customized_Course__c/Customized_Course__c.object-meta.xml
<CustomObject>
    <description>Captues the customized on-site course details from the client during the sales opportunity process.</description>
    <label>Customized Course</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Customized Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customized Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>