force-app/main/default/objects/Customized_Course__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the primary relationship to the Account record. Populated via WFR.</description>
    <inlineHelpText>Indicates the Account record the Customized Course is related to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customized Courses</relationshipLabel>
    <relationshipName>Customized_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>