force-app/main/default/objects/Customized_Course__c/fields/Anticipated_Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Course_Start_Date__c</fullName>
    <description>Captures the anticipated date of the customized course.</description>
    <inlineHelpText>Indicates the anticipated date of the customized course.</inlineHelpText>
    <label>Anticipated Course Start Date</label>
    <type>Date</type>
</CustomField>