force-app/main/default/objects/Customized_Course__c/fields/Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo__c</fullName>
    <description>Captures whether the customized course requires a company logo.</description>
    <inlineHelpText>Indicates whether the customized course requires a company logo. You can attach to the record if it does.</inlineHelpText>
    <label>Company Logo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>