force-app/main/default/objects/Customized_Course__c/fields/Course_Length__c.field-meta.xml
<CustomField>
    <fullName>Course_Length__c</fullName>
    <description>Captures the length of the course in hours.</description>
    <inlineHelpText>Indicates the length of the course in hours.</inlineHelpText>
    <label>Course Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>4 Hours</fullName>
            </value>
            <value>
                <fullName>8 Hours</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>