force-app/main/default/objects/Customized_Course__c/fields/Course_Length_Other__c.field-meta.xml
<CustomField>
    <fullName>Course_Length_Other__c</fullName>
    <description>Captures the length of time for the course if &quot;Other&quot; is selected in the Course Length field.</description>
    <inlineHelpText>If Other was selected, please provide the desired length in hours.</inlineHelpText>
    <label>Course Length Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>