force-app/main/default/objects/Customized_Course__c/fields/Custom_photo_s__c.field-meta.xml
<CustomField>
    <fullName>Custom_photo_s__c</fullName>
    <description>Captures whether the customized course requires custom photo(s).</description>
    <inlineHelpText>Indicates whether the customized course requires custom photo(s). You can attach to the record if it does.</inlineHelpText>
    <label>Custom photo(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>