force-app/main/default/objects/Customized_Course__c/fields/Description_of_Topics_To_be_Covered__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Topics_To_be_Covered__c</fullName>
    <description>Captures the description of topics the client would like to cover in customized course.</description>
    <inlineHelpText>Please provide a description of topics you would like covered in the program</inlineHelpText>
    <label>Description of Topics To be Covered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>