force-app/main/default/objects/Customized_Course__c/fields/Embedded_Policy_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Policy_Procedure__c</fullName>
    <description>Captures whether the customized course requires an embedded policy and procedure.</description>
    <inlineHelpText>Indicates whether the customized course requires an embedded policy and procedure. You can attach to the record if it does.</inlineHelpText>
    <label>Embedded Policy &amp; Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>