force-app/main/default/objects/Customized_Course__c/fields/Embedded_Video__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Video__c</fullName>
    <description>Captures whether the customized course requires an embedded video.</description>
    <inlineHelpText>Indicates whether the customized course requires an embedded video. You can attach to the record if it does.</inlineHelpText>
    <label>Embedded Video</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>