force-app/main/default/objects/Customized_Course__c/fields/Number_of_Employees_Requiring_Training__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Requiring_Training__c</fullName>
    <description>Captures the number of employees needing training for the customized course.</description>
    <inlineHelpText>Indicates the number of employees needing training for the customized course.</inlineHelpText>
    <label>Number of Employees Requiring Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>