force-app/main/default/objects/Customized_Course__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Captures the primary relationship to the Opportunity record.</description>
    <inlineHelpText>Indicates the Opportunity record the Customized Course is related to.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customized Courses</relationshipLabel>
    <relationshipName>Customized_Courses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>