force-app/main/default/objects/Customized_Course__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>Account__r.Primary_Contact__r.FirstName + &apos; &apos; + Account__r.Primary_Contact__r.LastName</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>