force-app/main/default/objects/Customized_Course__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <formula>Account__r.Primary_Contact_Email__c</formula>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>