force-app/main/default/objects/Customized_Course__c/fields/Provincial_or_Federally_Regulated__c.field-meta.xml
<CustomField>
    <fullName>Provincial_or_Federally_Regulated__c</fullName>
    <description>Captures whether the customized course is regulated provincially or federally.</description>
    <inlineHelpText>Indicates whether the customized course is regulated provincially or federally.</inlineHelpText>
    <label>Provincial or Federally Regulated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provincial</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>