force-app/main/default/objects/Customized_Course__c/fields/Reason_for_Training__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Training__c</fullName>
    <description>Captures the general reason for the customized course.</description>
    <inlineHelpText>Indicates the general reason for the customized course.</inlineHelpText>
    <label>Reason for Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meet complicance needs</fullName>
            </value>
            <value>
                <fullName>General awareness</fullName>
            </value>
            <value>
                <fullName>Improce safety performance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>