force-app/main/default/objects/Customized_Course__c/fields/Reason_for_Training_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Training_Other__c</fullName>
    <description>Captures the reason for the course if &quot;Other&quot; is selected in the Reason for Training field.</description>
    <inlineHelpText>If Other was selected, please explain your reason for training</inlineHelpText>
    <label>Reason for Training Other</label>
    <type>TextArea</type>
</CustomField>