force-app/main/default/objects/Customized_Course__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Captures the status of the customized course record.</description>
    <inlineHelpText>Indicates the customized course status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Course Proposed</fullName>
            </value>
            <value>
                <fullName>CD Reviewing Internally</fullName>
            </value>
            <value>
                <fullName>Custom Course Approved</fullName>
            </value>
            <value>
                <fullName>SOW in Development</fullName>
            </value>
            <value>
                <fullName>SOW sent to Client</fullName>
            </value>
            <value>
                <fullName>Approved by Client</fullName>
            </value>
            <value>
                <fullName>Custom Course in Development</fullName>
            </value>
            <value>
                <fullName>Custom Course Completed</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
            <value>
                <fullName>Curriculum Cancelled</fullName>
            </value>
            <value>
                <fullName>Course not feasible</fullName>
                <isActive>false</isActive>
                <label>Course not feasible</label>
            </value>
            <value>
                <fullName>Pending Client Responses</fullName>
                <isActive>false</isActive>
                <label>Pending Client Responses</label>
            </value>
            <value>
                <fullName>Proposal Approved by GM</fullName>
                <isActive>false</isActive>
                <label>Proposal Approved by GM</label>
            </value>
            <value>
                <fullName>Proposal Rejected by GM</fullName>
                <isActive>false</isActive>
                <label>Proposal Rejected by GM</label>
            </value>
            <value>
                <fullName>SOW and Pricing in Development</fullName>
                <isActive>false</isActive>
                <label>SOW and Pricing in Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>