force-app/main/default/objects/Customized_Course__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <description>Captures the intended target audience of the customized course.</description>
    <inlineHelpText>Indicates the intended target audience of the customized course. Please select all that apply.</inlineHelpText>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Workers</fullName>
            </value>
            <value>
                <fullName>Joint Health &amp; Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>