force-app/main/default/objects/Customized_Course__c/fields/Wall_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Wall_Certificate__c</fullName>
    <description>Captures whether the participants require a certificate upon completion of the course.</description>
    <inlineHelpText>Wall certificate for participants upon completion of the course</inlineHelpText>
    <label>Wall Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>