force-app/main/default/objects/Customized_Course__c/validationRules/Course_Length_Other_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Length_Other_Required</fullName>
    <active>true</active>
    <description>Course Length Other must be populated when Course Length = &quot;Other&quot;</description>
    <errorConditionFormula>AND( ISPICKVAL( Course_Length__c , &quot;Other&quot;),
     ISBLANK( Course_Length_Other__c ) 
 )</errorConditionFormula>
    <errorMessage>You must indicate the other course length.</errorMessage>
</ValidationRule>