force-app/main/default/objects/Customized_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Anticipated_Course_Start_Date__c</columns>
    <columns>Reason_for_Training__c</columns>
    <columns>Reason_for_Training_Other__c</columns>
    <columns>Provincial_or_Federally_Regulated__c</columns>
    <columns>Number_of_Employees_Requiring_Training__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>